# TrymeLinux

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  WSL_SETUP.md  usefull_linux.md
App/: CMakeLists.txt
App/sources/: App.cpp
App/sources/Tests/GPIO/: GPIO.Benchy.cpp  GPIO.Benchy.h
App/sources/Tests/UART/: UART.Benchy.cpp  UART.Benchy.h
TrymeLinux/: CMakeLists.txt  TrymeLinux.cpp  TrymeLinux.h
cmake/toolchains/: aarch64-linux-gnu.cmake
deploy/: deploy_armbian.sh
